@@ -4,7 +4,7 @@
  <property name="title" i18n:translate="">Friendly Date Criteria</property>
  <property name="description"
      i18n:translate="">A relative date criterion</property>
- <property name="content_icon">document_icon.png</property>
+ <property name="icon_expr">string:${portal_url}/document_icon.png</property>
  <property name="content_meta_type">ATFriendlyDateCriteria</property>
  <property name="product">ATContentTypes</property>
  <property name="factory">addATDateCriteria</property>
