@@ -4,7 +4,7 @@
  <property name="title" i18n:translate="">Date Range Criterion</property>
  <property name="description"
      i18n:translate="">A date range criterion</property>
- <property name="content_icon">document_icon.png</property>
+ <property name="icon_expr">string:${portal_url}/document_icon.png</property>
  <property name="content_meta_type">ATDateRangeCriterion</property>
  <property name="product">ATContentTypes</property>
  <property name="factory">addATDateRangeCriterion</property>
