@@ -5,7 +5,7 @@
  <property name="title" i18n:translate="">Portal Types Criterion</property>
  <property name="description"
      i18n:translate="">A portal_types criterion</property>
- <property name="content_icon">document_icon.png</property>
+ <property name="icon_expr">string:${portal_url}/document_icon.png</property>
  <property name="content_meta_type">ATPortalTypeCriterion</property>
  <property name="product">ATContentTypes</property>
  <property name="factory">addATPortalTypeCriterion</property>
