@@ -5,7 +5,7 @@
  <property name="title" i18n:translate="">Simple String Criterion</property>
  <property name="description"
     i18n:translate="">A simple string criterion</property>
- <property name="content_icon">document_icon.png</property>
+ <property name="icon_expr">string:${portal_url}/document_icon.png</property>
  <property name="content_meta_type">ATSimpleStringCriterion</property>
  <property name="product">ATContentTypes</property>
  <property name="factory">addATSimpleStringCriterion</property>
