@@ -5,7 +5,7 @@
  <property name="title" i18n:translate="">Page</property>
  <property name="description"
       i18n:translate="">A page in the site. Can contain rich text.</property>
- <property name="content_icon">document_icon.png</property>
+ <property name="icon_expr">string:${portal_url}/document_icon.png</property>
  <property name="content_meta_type">ATDocument</property>
  <property name="product">ATContentTypes</property>
  <property name="factory">addATDocument</property>
