@@ -5,7 +5,7 @@
  <property name="title" i18n:translate="">File</property>
  <property name="description"
       i18n:translate="">An external file uploaded to the site.</property>
- <property name="content_icon">file_icon.png</property>
+ <property name="icon_expr">string:${portal_url}/file_icon.png</property>
  <property name="content_meta_type">ATFile</property>
  <property name="product">ATContentTypes</property>
  <property name="factory">addATFile</property>
