@@ -5,7 +5,7 @@
  <property name="title" i18n:translate="">Folder</property>
  <property name="description"
      i18n:translate="">A folder which can contain other items.</property>
- <property name="content_icon">folder_icon.png</property>
+ <property name="icon_expr">string:${portal_url}/folder_icon.png</property>
  <property name="content_meta_type">ATFolder</property>
  <property name="product">ATContentTypes</property>
  <property name="factory">addATFolder</property>
