@@ -5,7 +5,7 @@
  <property name="title" i18n:translate=""></property>
  <property name="description"
       i18n:translate="">The portal_type for the root object in a Plone system.</property>
- <property name="content_icon">site_icon.png</property>
+ <property name="icon_expr">string:${portal_url}/site_icon.png</property>
  <property name="content_meta_type">Plone Site</property>
  <property name="product">CMFPlone</property>
  <property name="factory">manage_addSite</property>
