@@ -5,7 +5,7 @@
  <property name="title" i18n:translate="">Collection</property>
  <property name="description"
      i18n:translate="">An automatically updated stored search that can be used to display items matching criteria you specify.</property>
- <property name="content_icon">topic_icon.png</property>
+ <property name="icon_expr">string:${portal_url}/topic_icon.png</property>
  <property name="content_meta_type">ATTopic</property>
  <property name="product">ATContentTypes</property>
  <property name="factory">addATTopic</property>
